# dsh-sdk-platform-rs

./: Cargo.toml  SECURITY.md  flake.nix  generate_golden.py  golden_data.json  rust-toolchain.toml
.github/workflows/: branch.yaml  main.yaml
dsh_rest_api_client/: Cargo.toml
dsh_sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs  local_datastreams.json  murmur2_golden_set_generator.py
dsh_sdk/examples/: kafka_dsh_stream_producer.rs
dsh_sdk/src/: dsh.rs  lib.rs
dsh_sdk/src/datastream/: error.rs  mod.rs
dsh_sdk/src/proto/: dsh.proto
dsh_sdk/src/protocol_adapters/kafka_protocol/: dsh_envelope.rs  mod.rs  rdkafka.rs  utils.rs
dsh_sdk/src/utils/: kafka.rs  mod.rs  murmur2.rs
dsh_sdk/src/utils/kafka/: kafka.rs  mod.rs
dsh_sdk/test_resources/: murmur2_golden_data.json  valid_datastreams.json
example_dsh_service/: Cargo.toml
example_stream_producer/: Cargo.toml  Dockerfile
example_stream_producer/src/: main.rs
