[workspace]
members = [
  "dsh_rest_api_client",
  "dsh_sdk",
  "example_dsh_service",
  "example_stream_producer",
]
resolver = "2"

[workspace.package]
authors = ["KPN"]
description = "SDK for KPN Data Services Hub"
edition = "2024"
exclude = ["/tmp", "/test_files"]
homepage = "https://www.kpn.com/dsh"
license = "Apache-2.0"
repository = "https://github.com/kpn-dsh/dsh-sdk-platform-rs"
